fix backdrop fade in transition on ios

--- a/src/components/action-sheet/action-sheet.scss
+++ b/src/components/action-sheet/action-sheet.scss
@@ -16,11 +16,12 @@ action-sheet {
     position: absolute;
     left: 0;
     top: 0;
-    background-color: rgba(0, 0, 0, 0);
-    transition: background-color 0.3s ease;
+    background-color: rgb(0, 0, 0);
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
   .backdrop-fade-in {
-    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0.4;
   }
   .action-sheet {
     position: absolute;
